Make desktopui_MashLogin not crash.

This is a short term fix. Long term, we need to fix the underlying bug that
in mus-viz mode, browser process doesn't talk to GPU process.

BUG=796386
TEST=affected tests on chromeos bots
R=piman@chromium.org

Change-Id: I8fe8e7cbe62c39f035b5ba6cf01b8f82b7d4e241